--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pyautogui
-opencv-python-headless
-mss
-opencv-python
-numpy
+streamlit==1.27.0
+pyautogui==0.9.53
+pynput==1.7.6
+mss==7.1.4
+numpy==1.26.0
+opencv-python-headless==4.8.1.78
